* Some minor changes.